# toad

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  spec.md
.github/workflows/: docker-build-pr.yml  docker-publish.yml
.sqlx/: query-4192130b74488ead7077865b246dbd50aaeb5cee3eb96a4c0c7ebe23f1d56e2a.json  query-466221eaeb077cb9b39c6d295f6978d99e0ff4afe20c2307055ad3da015eba02.json  query-6f2f3c026cfc764ba52c6044e48263a8157829c8376fa87c460e1f9a7ec194f8.json  query-c890a9d745b6232fae98276bd11cc2aa86700ce83b4167a5b96bda903dd6cc77.json  query-d33d559d04f53afa511bf6ec265f822246488b8e42306e6965fa711a4bb9aa75.json  query-d38d7a7c8744c802ab1c75fc8ff324abcc7a6a6a36ac5171eb8b032d348504f3.json  query-e407a53dc92d4c99726a5c232e5a73bc81f2038159528b8b24d1b9d3d516aced.json  query-e7de7433ae020432f4d557edb9c78e67daada4672b75509a91097ef422765b48.json
app/: app.go  version.go
docs/: dockerfile-optimization.md  refactor-plan.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
gateway/: README.md
gateway/client/: clinet.go  kraken_grid.go
gateway/cmd/: main.go
gateway/http/: bot.go  handler.go  (+2 more)
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
kraken/: kraken.go  module.go  options.go  types.go
kraken_grid/: README.md
log/: module.go  options.go  types.go
postgres/: database.go  migrator.go  module.go  options.go  sql.go
src/: assets.rs  config.rs  main.rs
telegram/: telegram.go
tradeogre/: tradeogre.go  types.go
utils/: buffer_writer.go  ring_buffer.go  switch.go  switch_test.go  timer.go  tools.go  tools_test.go
websocket/: options.go  websocket.go
(+67 files in other folders)
